# avva-misis-lct

./: .env  .gitignore  docker-compose.yml  prompt_engineering_reasearh.ipynb  pyproject.toml  readme.md  requirements.txt
AVVA/: package-lock.json  package.json  vite.config.js
AVVA/src/: App.css  App.jsx  main.jsx
AVVA/src/common/: net.js
AVVA/src/components/: BoardUser.jsx  Home.jsx  Login.jsx  Profile.jsx  Register.jsx
AVVA/src/services/: auth.service.js  report.service.js  user.service.js
app/: __main__.py  app.dockerfile  requirements.txt
app/src/database/: general_db.py
app/src/database/models/: models.py
app/src/params/: auth.py
app/src/routers/: general_router.py  user_router.py
app/src/schemas/: general_schemas.py  user_schemas.py
app/src/services/: general_service.py  gpt.py
app/src/services/final_ML/: classes.py
final_ML/: based_resource.json  classes.py  prompts.json
front/src/UI/WhiteBtn/: WhiteBtn.jsx  WhiteBtn.module.css
front/src/UI/YellowBtn/: YellowBtn.jsx  YellowBtn.module.css
front/src/api/: Service.js
front/src/components/FaqComponent/: FaqComponent.jsx  FaqComponent.module.css
front/src/components/FilterComponent/: FilterComponent.jsx  FilterComponent.module.css
front/src/components/Footer/: Footer.jsx  Footer.module.css
research/: prompt_engineering_reasearh.ipynb
traefik/: traefik.yml
wrapped_model/: load_model.py  wrapped_model.py
yagpt+silen/: body.json  code.py  parser.py  yagpt.py
yandex_modes/: yagpt.py
yandex_modes/json/: body.json  file.json  prompts.json
(+16 files in other folders)
