[tool.poetry]
name = "avva-misis-lct"
version = "1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
bcrypt = "^4.1.3"
SQLAlchemy = "^2.0.30"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
requests = "^2.32.3"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
